--- a/index.html
+++ b/index.html
@@ -84,6 +84,21 @@
         <div class="card mb-3" style="max-width: 540px;">
           <div class="row g-0">
             <div class="col-md-4">
+              <img src="./image/america.jpg" class="img-fluid rounded-start" alt="figura capitan america">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h2 class="card-title">Figuras de acción</h2>
+                <p class="card-text">Realizamos todo tipo de figuras de comic, aeronautica, proyectos personalizados, dioramas y cualquier producto modelado en 3D</p>
+                
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="card mb-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-md-4">
               <img src="./image/souvenir.jpeg" class="img-fluid rounded-start" alt="dinosaurio para pintar">
             </div>
             <div class="col-md-8">
