--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -78,10 +78,10 @@
 
     <footer class="justify-content-center">  
       <ul class="nav col-md-8 justify-content-center list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"> <img src="../image/instagram.png" class="logoInstagram" alt="instagram"></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"><img src="../image/facebook.png" class="logoFacebook" alt="facebook"></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"><img src="../image/youtube.png" class="logoyoutube" alt="youtube"></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"><img src="../image/wasap.png" class="logowasap" alt="wasap"></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://instagram.com/excelsior.3d"> <img src="../image/instagram.png" class="logoInstagram" alt="instagram"></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://facebook.com/excelsio.3d"><img src="../image/facebook.png" class="logoFacebook" alt="facebook"></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><img src="../image/youtube.png" class="logoyoutube" alt="youtube"></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><img src="../image/wasap.png" class="logowasap" alt="wasap"></a></li>
       </ul>
     </footer>
 
