--- a/pages/bienvenidos.html
+++ b/pages/bienvenidos.html
@@ -12,7 +12,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navColor">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="../image/logo_alta.png" alt="" width="50"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../image/logo_alta.png" alt="" width="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -73,14 +73,14 @@
 
 <!-- Inicio Footer -->
 
-      <footer class="justify-content-center">  
-        <ul class="nav col-md-8 justify-content-center list-unstyled d-flex">
-          <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"> <img src="../image/instagram.png" class="logoInstagram" alt="instagram"></a></li>
-          <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"><img src="../image/facebook.png" class="logoFacebook" alt="facebook"></a></li>
-          <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"><img src="../image/youtube.png" class="logoyoutube" alt="youtube"></a></li>
-          <li class="ms-3"><a class="text-muted" href="https://getbootstrap.com/docs/5.2/examples/footers/#"><img src="../image/wasap.png" class="logowasap" alt="wasap"></a></li>
-        </ul>
-      </footer>
+<footer class="justify-content-center">  
+  <ul class="nav col-md-8 justify-content-center list-unstyled d-flex">
+    <li class="ms-3"><a class="text-muted" href="https://instagram.com/excelsior.3d"> <img src="../image/instagram.png" class="logoInstagram" alt="instagram"></a></li>
+    <li class="ms-3"><a class="text-muted" href="https://facebook.com/excelsio.3d"><img src="../image/facebook.png" class="logoFacebook" alt="facebook"></a></li>
+    <li class="ms-3"><a class="text-muted" href="#"><img src="../image/youtube.png" class="logoyoutube" alt="youtube"></a></li>
+    <li class="ms-3"><a class="text-muted" href="#"><img src="../image/wasap.png" class="logowasap" alt="wasap"></a></li>
+  </ul>
+</footer>
 
 
 <!-- Fin Footer -->
