--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -54,75 +54,75 @@
 
         <section class="galeriaOrden">
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/messifunko.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/messifunko.jpg" class="card-img-top" alt="Lionel Messi">
               <div class="card-body">
                 <p class="card-text">Lionel Messi</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/maradona.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/maradona.jpg" class="card-img-top" alt="Diego Maradona">
               <div class="card-body">
                 <p class="card-text">Diego Maradona</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/dibu.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/dibu.jpg" class="card-img-top" alt="Dibu Martinez">
               <div class="card-body">
                 <p class="card-text">Dibu Martinez</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/maxi.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/maxi.jpg" class="card-img-top" alt="Maximiliano Rodriguez">
               <div class="card-body">
                 <p class="card-text">Maximiliano Rodriguez</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/palermo.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/palermo.jpg" class="card-img-top" alt="Martin Palermo">
               <div class="card-body">
                 <p class="card-text">Martin Palermo</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/bocha.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/bocha.jpg" class="card-img-top" alt="Bochini">
               <div class="card-body">
                 <p class="card-text">Bochini</p>
               </div>
             </div>
 
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/riquelme.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/riquelme.jpg" class="card-img-top" alt="Juan Roman Riquelme">
               <div class="card-body">
                 <p class="card-text">Juan Roman Riquelme</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/ponzio.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/ponzio.jpg" class="card-img-top" alt="Leonardo Ponzio">
               <div class="card-body">
                 <p class="card-text">Leonardo Ponzio</p>
               </div>
             </div>
 
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/harry.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/harry.jpg" class="card-img-top" alt="Diorama Harry vs Voldemort">
               <div class="card-body">
                 <p class="card-text">Diorama Harry vs Voldemort</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/hagrid.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/hagrid.jpg" class="card-img-top" alt="Hagrid y Dumbledore">
               <div class="card-body">
                 <p class="card-text">Hagrid y Dumbledore</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/indio.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/indio.jpg" class="card-img-top" alt="Indio Solari">
               <div class="card-body">
                 <p class="card-text">Indio Solari</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/funkos/padrino.jpg" class="card-img-top" alt="...">
+              <img src="../image/funkos/padrino.jpg" class="card-img-top" alt="El padrino">
               <div class="card-body">
                 <p class="card-text">El padrino</p>
               </div>
@@ -133,98 +133,98 @@
 
           <section class="galeriaOrden">
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/stanlee.jpg" class="card-img-top" alt="...">
+              <img src="../image/figuras/stanlee.jpg" class="card-img-top" alt="Figura Stan Lee">
               <div class="card-body">
                 <p class="card-text">Stan Lee</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/jordan.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/jordan.jpg" class="card-img-top" alt="Michael Jordan">
               <div class="card-body">
                 <p class="card-text">Michael Jordan</p>
               </div>
             </div>
 
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/rambo.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/rambo.jpg" class="card-img-top" alt="Jhon Rambo">
               <div class="card-body">
                 <p class="card-text">Jhon Rambo</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/criter.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/criter.jpg" class="card-img-top" alt="Critters">
               <div class="card-body">
                 <p class="card-text">Critters</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/javier.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/javier.jpg" class="card-img-top" alt="Charles Xavier">
               <div class="card-body">
                 <p class="card-text">Charles Xavier</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/goku.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/goku.jpg" class="card-img-top" alt="Goku">
               <div class="card-body">
                 <p class="card-text">Goku</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/terminator.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/terminator.jpg" class="card-img-top" alt="Terminator">
               <div class="card-body">
                 <p class="card-text">Terminator</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/elpa.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/elpa.jpg" class="card-img-top" alt="El padrino">
               <div class="card-body">
                 <p class="card-text">El padrino</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/fornite.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/fornite.jpg" class="card-img-top" alt="Fortnite">
               <div class="card-body">
                 <p class="card-text">Fortnite</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/fredy.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/fredy.jpg" class="card-img-top" alt="Freddie Mercury caricatura">
               <div class="card-body">
                 <p class="card-text">Freddie Mercury caricatura</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/fredy2.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/fredy2.jpg" class="card-img-top" alt="Freddie Mercury">
               <div class="card-body">
                 <p class="card-text">Freddie Mercury</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/futuro.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/futuro.jpg" class="card-img-top" alt="Diorama Volver al futuro">
               <div class="card-body">
                 <p class="card-text">Diorama Volver al futuro</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/kobe.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/kobe.jpg" class="card-img-top" alt="Kobe Bryant">
               <div class="card-body">
                 <p class="card-text">Kobe Bryant</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/rocky.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/rocky.jpg" class="card-img-top" alt="Rocky Balboa">
               <div class="card-body">
                 <p class="card-text">Rocky Balboa</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/slash.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/slash.jpg" class="card-img-top" alt="Slash">
               <div class="card-body">
                 <p class="card-text">Slash</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/sonic.jpg" class="card-img-top" alt="...">
+              <img src="../image/Figuras/sonic.jpg" class="card-img-top" alt="Sonic">
               <div class="card-body">
                 <p class="card-text">Sonic</p>
               </div>
@@ -236,73 +236,73 @@
           <section class="galeriaOrden">
 
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/razor.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/razor.jpeg" class="card-img-top" alt="Razor Crest">
               <div class="card-body">
                 <p class="card-text">Razor Crest</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/halcon.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/halcon.jpeg" class="card-img-top" alt="Halcon Milenario">
               <div class="card-body">
                 <p class="card-text">Halcon Milenario</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/halcon2.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/halcon2.jpeg" class="card-img-top" alt="Interior Halcon Milenario">
               <div class="card-body">
                 <p class="card-text">Interior Halcon Milenario</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/xwing.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/xwing.jpeg" class="card-img-top" alt="X-wing">
               <div class="card-body">
                 <p class="card-text">X-wing</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/tie.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/tie.jpeg" class="card-img-top" alt="Tie Fighter">
               <div class="card-body">
                 <p class="card-text">Tie Fighter</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/destructor.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/destructor.jpeg" class="card-img-top" alt="Destructor Imperial">
               <div class="card-body">
                 <p class="card-text">Destructor Imperial</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/estrella.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/estrella.jpeg" class="card-img-top" alt="Estrella de la muerte">
               <div class="card-body">
                 <p class="card-text">Estrella de la muerte</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/shafle.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/shafle.jpeg" class="card-img-top" alt="Nave Imperial">
               <div class="card-body">
                 <p class="card-text">Nave Imperial -Shuffle-</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/varios.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/varios.jpeg" class="card-img-top" alt="Naves en proceso">
               <div class="card-body">
                 <p class="card-text">Naves en proceso</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/delo.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/delo.jpeg" class="card-img-top" alt="Delorean Volver al futuro">
               <div class="card-body">
                 <p class="card-text">Delorean Volver al futuro</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/delorean.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/delorean.jpeg" class="card-img-top" alt="Volver al futuro">
               <div class="card-body">
                 <p class="card-text">Volver al futuro</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/naves/n1.jpeg" class="card-img-top" alt="...">
+              <img src="../image/naves/n1.jpeg" class="card-img-top" alt="N1 Mandalorian">
               <div class="card-body">
                 <p class="card-text">N1 Mandalorian</p>
               </div>
