--- a/pages/productos.html
+++ b/pages/productos.html
@@ -96,7 +96,7 @@
             </div>
 
             <div class="card" style="width: 30rem;">
-              <img src="../image/wally.jpg" class="card-img-top" alt="...">
+              <img src="../image/wally.JPG" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Armar y pintar</h5>
                 <p class="card-text">Los prototipos de Fab365 para armar y pintar</p>
