--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -152,7 +152,7 @@
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/criter.jpg" class="card-img-top" alt="Critters">
+              <img src="../image/Figuras//criter.jpg" class="card-img-top" alt="Critters">
               <div class="card-body">
                 <p class="card-text">Critters</p>
               </div>
