--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -12,7 +12,7 @@
   <header>
     <nav class="navbar navbar-expand-lg navColor">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html"><img src="../image/logo_alta.png" alt="" width="50"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../image/logo_alta.png" alt="" width="50"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -139,92 +139,92 @@
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/jordan.jpg" class="card-img-top" alt="Michael Jordan">
+              <img src="../image/figuras/jordan.jpg" class="card-img-top" alt="Michael Jordan">
               <div class="card-body">
                 <p class="card-text">Michael Jordan</p>
               </div>
             </div>
 
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/rambo.jpg" class="card-img-top" alt="Jhon Rambo">
+              <img src="../image/figuras/rambo.jpg" class="card-img-top" alt="Jhon Rambo">
               <div class="card-body">
                 <p class="card-text">Jhon Rambo</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras//criter.jpg" class="card-img-top" alt="Critters">
+              <img src="../image/figuras//criter.jpg" class="card-img-top" alt="Critters">
               <div class="card-body">
                 <p class="card-text">Critters</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/javier.jpg" class="card-img-top" alt="Charles Xavier">
+              <img src="../image/figuras/javier.jpg" class="card-img-top" alt="Charles Xavier">
               <div class="card-body">
                 <p class="card-text">Charles Xavier</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/goku.jpg" class="card-img-top" alt="Goku">
+              <img src="../image/figuras/goku.jpg" class="card-img-top" alt="Goku">
               <div class="card-body">
                 <p class="card-text">Goku</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/terminator.jpg" class="card-img-top" alt="Terminator">
+              <img src="../image/figuras/terminator.jpg" class="card-img-top" alt="Terminator">
               <div class="card-body">
                 <p class="card-text">Terminator</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/elpa.jpg" class="card-img-top" alt="El padrino">
+              <img src="../image/figuras/elpa.jpg" class="card-img-top" alt="El padrino">
               <div class="card-body">
                 <p class="card-text">El padrino</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/fornite.jpg" class="card-img-top" alt="Fortnite">
+              <img src="../image/figuras/fornite.jpg" class="card-img-top" alt="Fortnite">
               <div class="card-body">
                 <p class="card-text">Fortnite</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/fredy.jpg" class="card-img-top" alt="Freddie Mercury caricatura">
+              <img src="../image/figuras/fredy.jpg" class="card-img-top" alt="Freddie Mercury caricatura">
               <div class="card-body">
                 <p class="card-text">Freddie Mercury caricatura</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/fredy2.jpg" class="card-img-top" alt="Freddie Mercury">
+              <img src="../image/figuras/fredy2.jpg" class="card-img-top" alt="Freddie Mercury">
               <div class="card-body">
                 <p class="card-text">Freddie Mercury</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/futuro.jpg" class="card-img-top" alt="Diorama Volver al futuro">
+              <img src="../image/figuras/futuro.jpg" class="card-img-top" alt="Diorama Volver al futuro">
               <div class="card-body">
                 <p class="card-text">Diorama Volver al futuro</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/kobe.jpg" class="card-img-top" alt="Kobe Bryant">
+              <img src="../image/figuras/kobe.jpg" class="card-img-top" alt="Kobe Bryant">
               <div class="card-body">
                 <p class="card-text">Kobe Bryant</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/rocky.jpg" class="card-img-top" alt="Rocky Balboa">
+              <img src="../image/figuras/rocky.jpg" class="card-img-top" alt="Rocky Balboa">
               <div class="card-body">
                 <p class="card-text">Rocky Balboa</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/slash.jpg" class="card-img-top" alt="Slash">
+              <img src="../image/figuras/slash.jpg" class="card-img-top" alt="Slash">
               <div class="card-body">
                 <p class="card-text">Slash</p>
               </div>
             </div>
             <div class="card" style="width: 30rem;">
-              <img src="../image/Figuras/sonic.jpg" class="card-img-top" alt="Sonic">
+              <img src="../image/figuras/sonic.jpg" class="card-img-top" alt="Sonic">
               <div class="card-body">
                 <p class="card-text">Sonic</p>
               </div>
