--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,42 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Excelsior3D</title>
+    <meta name="description" content="Impresión 3D de alto nivel, Impresión a demanda, disenos personalizados">
+    <meta name="keywords" content="impresión3d, jueguetes, funkos, souvenirs, figuras, personajes">
+    <title>Productos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navColor">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../image/logo_alta.png" alt="" width="50"></a>
+        <a class="navbar-brand " href="../index.html"><img src="../image/logo_alta.png" alt="logo excelsior.3d"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navDerecha" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link"  href="./bienvenidos.html">Bienvenidos</a>
+              <a class="nav-link encabezado"  href="./bienvenidos.html">Bienvenidos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./galeria.html">Galeria</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="./productos.html" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Productos
-              </a>
-              <ul class="dropdown-menu menuDesplegable" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="./productos.html">Funkos personalizados</a></li>
-                <li><a class="dropdown-item" href="./productos.html">Figuras de acción</a></li>
-                <li><a class="dropdown-item" href="./productos.html">Armar y pintar</a></li>
-                <li><a class="dropdown-item" href="./productos.html">Souvenirs</a></li>
-                <li><a class="dropdown-item" href="./productos.html">Decoración</a></li>
-                <li><a class="dropdown-item" href="./productos.html">Piezas industriales</a></li>
-              </ul>
+              <a class="nav-link encabezado" href="./galeria.html">Galeria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link encabezado" href="./productos.html">Productos</a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link encabezado" href="./contacto.html">Contacto</a>
             </li>
             
           </ul>
@@ -50,14 +44,15 @@
 
     <main>
       <h1 class="titulo">Productos</h1>
-          <section class="galeriaOrden">
+      <h2 class="subTitulo">Si no encuentras lo que buscas, avisanos y lo hacemos.</h2>
+          <section class="produOrden">
 
-            <div class="card" style="width: 30rem;">
-              <img src="../image/funkos.jpg" class="card-img-top" alt="...">
+            <div class="card produCard" >
+              <img src="../image/funkos.jpg" class="card-img-top" alt="funkos personalizados">
               <div class="card-body">
-                <h5 class="card-title">Funkos</h5>
-                <p class="card-text">Realizamos todo tipo de funkos Personalizados </p>
-                <ul class="detalleProdu">
+                <h3 class="card-title">Funkos</h3>
+                <h4 class="card-text">Realizamos todo tipo de funkos Personalizados </h4>
+                <ul>
                   <li>Medidas 15cm</li>
                   <li>Pintura acrílica y laca</li>
                   <li>Demora 72hs</li>
@@ -67,12 +62,12 @@
               </div>
             </div>
 
-            <div class="card" style="width: 30rem;">
-              <img src="../image/thanos.jpg" class="card-img-top" alt="...">
+            <div class="card produCard" >
+              <img src="../image/thanos.jpg" class="card-img-top" alt="imagen de thanos">
               <div class="card-body">
-                <h5 class="card-title">Figuras de acción</h5>
-                <p class="card-text">Tenemos un catalo extenso de figuras y diseños exclusivos </p>
-                <ul class="detalleProdu">
+                <h3 class="card-title">Figuras de acción</h3>
+                <h4 class="card-text">Tenemos un catálolo extenso de figuras y diseños exclusivos </h4>
+                <ul>
                   <li>Tamaño a definir por el comprador</li>
                   <li>Pintura acrílica, aerografia y laca</li>
                   <li>Demora es segun figura y medida</li> 
@@ -81,12 +76,12 @@
               </div>
             </div>
 
-            <div class="card" style="width: 30rem;">
-              <img src="../image/fantasma.jpg" class="card-img-top" alt="...">
+            <div class="card produCard" >
+              <img src="../image/fantasma.jpg" class="card-img-top" alt="auto casafantasmas">
               <div class="card-body">
-                <h5 class="card-title">Vehiculos y Naves</h5>
-                <p class="card-text">Realizamos todo tipo de vehiculos y naves de series o peliculas</p>
-                <ul class="detalleProdu">
+                <h3 class="card-title">Vehiculos y Naves</h3>
+                <h4 class="card-text">Realizamos todo tipo de vehiculos y naves de series o peliculas</h4>
+                <ul>
                   <li>Tamaño a definir por el comprador</li>
                   <li>Pintura acrílica, aerografia y laca</li>
                   <li>Demora es segun figura y medida</li> 
@@ -95,12 +90,12 @@
               </div>
             </div>
 
-            <div class="card" style="width: 30rem;">
-              <img src="../image/wally.JPG" class="card-img-top" alt="...">
+            <div class="card produCard" >
+              <img src="../image/wally.JPG" class="card-img-top" alt="imagen wallie">
               <div class="card-body">
-                <h5 class="card-title">Armar y pintar</h5>
-                <p class="card-text">Los prototipos de Fab365 para armar y pintar</p>
-                <ul class="detalleProdu">
+                <h3 class="card-title">Armar y pintar</h3>
+                <h4 class="card-text">Los prototipos de Fab365 para armar y pintar</h4>
+                <ul>
                   <li>Tamaño a definir por el comprador</li>
                   <li>Se imprime en blanco</li>
                   <li>Hay video para el armado</li> 
@@ -109,10 +104,37 @@
               </div>
             </div>
 
+            <div class="card produCard" >
+              <img src="../image/souvenir.jpeg" class="card-img-top" alt="imagen de un souvenir de dinosaurio">
+              <div class="card-body">
+                <h3 class="card-title">Souvenirs</h3>
+                <h4 class="card-text">Tenemos gran variedad de figuras</h4>
+                <ul>
+                  <li>Tamaño 10cm aprox.</li>
+                  <li>Se imprime en blanco</li>
+                  <li>Incluye 2 pinturas, 1 pincel</li> 
+                </ul>
+                <a href="#" class="btn btn-primary">Ingresar</a>
+              </div>
+            </div>
+
+            <div class="card produCard" >
+              <img src="../image/industrial.jpg" class="card-img-top" alt="imagen de piezas industriales">
+              <div class="card-body">
+                <h3 class="card-title">Piezas Industriales</h3>
+                <h4 class="card-text">Se realizan con planos
+                </h4>
+                <ul>
+                  <li>Tamaño a definir por el comprador</li>
+                  <li>Se imprime en blanco o negro</li>
+                </ul>
+                <a href="#" class="btn btn-primary">Ingresar</a>
+              </div>
+            </div>
+
           </section>
     </main>
-      
-<!-- Inicio Footer -->
+
     <!-- Inicio Footer -->
 
     <footer class="justify-content-center">  
@@ -125,7 +147,6 @@
     </footer>
 
 
-<!-- Fin Footer -->
  <!-- Fin Footer -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
