--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./image/redespierto.jpg" class="d-block w-100" alt="...">
+              <img src="./image/redespierto.jpg" class="d-block w-100" alt="foto del programa de tv">
             </div>
             <div class="carousel-item">
-              <img src="./image/batman.jpg" class="d-block w-100" alt="...">
+              <img src="./image/batman.jpg" class="d-block w-100" alt="foto del batimavil">
             </div>
             <div class="carousel-item">
-              <img src="./image/fantasma.jpg" class="d-block w-100" alt="...">
+              <img src="./image/fantasma.jpg" class="d-block w-100" alt="auto de los casafantasmas">
             </div>
             <div class="carousel-item">
-              <img src="./image/barco.jpg" class="d-block w-100" alt="...">
+              <img src="./image/barco.jpg" class="d-block w-100" alt="barco de jabba">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -88,7 +88,7 @@
       </div> 
 
       <div class="presentacion">
-        <div class="card mb-3 tarjeta" style="max-width: 540px;">
+        <div class="card mb-3 tarjeta" >
           <div class="row g-0">
             <div class="col-md-4">
               <img src="./image/america.jpg" class="img-fluid rounded-start" alt="figura capitan america">
@@ -103,7 +103,7 @@
           </div>
         </div>
 
-        <div class="card mb-3 tarjeta" style="max-width: 540px;">
+        <div class="card mb-3 tarjeta">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="./image/souvenir.jpeg" class="img-fluid rounded-start" alt="dinosaurio para pintar">
@@ -118,7 +118,7 @@
           </div>
         </div>
 
-        <div class="card mb-3 tarjeta" style="max-width: 540px;">
+        <div class="card mb-3 tarjeta">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="./image/funkos.jpg" class="img-fluid rounded-start" alt="funko pop personalizado">
@@ -134,7 +134,7 @@
           </div>
         </div>
        
-        <div class="card mb-3 tarjeta" style="max-width: 540px;">
+        <div class="card mb-3 tarjeta">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="./image/industrial.jpg" class="img-fluid rounded-start" alt="funko pop personalizado">
@@ -150,7 +150,7 @@
           </div>
         </div>
 
-        <div class="card mb-3 tarjeta" style="max-width: 540px;">
+        <div class="card mb-3 tarjeta">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="./image/fab365.jpg" class="img-fluid rounded-start" alt="funko pop personalizado">
