--- a/pages/bienvenidos.html
+++ b/pages/bienvenidos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Impresión 3D de alto nivel, Impresión a demanda, disenos personalizados">
+    <meta name="description" content="Informacion de la empresa y sus origenes en el año 2020">
     <meta name="keywords" content="impresión3d, jueguetes, funkos, souvenirs, figuras, personajes">
     <title>Bienvenidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
