--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Impresión 3D de alto nivel, Impresión a demanda, disenos personalizados">
+    <meta name="description" content="Galeria de trabajos realizados">
     <meta name="keywords" content="impresión3d, jueguetes, funkos, souvenirs, figuras, personajes">
     <title>Galeria</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -66,11 +66,12 @@
               </div>
             </div>
             <div class="card galeriaOrden" >
-              <img src="../image/funkos/maxi.jpg" class="card-img-top" alt="Maximiliano Rodriguez">
+              <img src="../image/funkos/ponzio.jpg" class="card-img-top" alt="Leonardo Ponzio">
               <div class="card-body">
-                <h3 class="card-text">Maximiliano Rodriguez</h3>
+                <h3 class="card-text">Leonardo Ponzio</h3>
               </div>
             </div>
+            
             <div class="card galeriaOrden" >
               <img src="../image/funkos/palermo.jpg" class="card-img-top" alt="Martin Palermo">
               <div class="card-body">
@@ -91,9 +92,9 @@
               </div>
             </div>
             <div class="card galeriaOrden" >
-              <img src="../image/funkos/ponzio.jpg" class="card-img-top" alt="Leonardo Ponzio">
+              <img src="../image/funkos/maxi.jpg" class="card-img-top" alt="Maximiliano Rodriguez">
               <div class="card-body">
-                <h3 class="card-text">Leonardo Ponzio</h3>
+                <h3 class="card-text">Maximiliano Rodriguez</h3>
               </div>
             </div>
 
@@ -127,9 +128,9 @@
 
           <section class="orden">
             <div class="card galeriaOrden" >
-              <img src="../image/figuras/stanlee.jpg" class="card-img-top" alt="Figura Stan Lee">
+              <img src="../image/figuras/futuro.jpg" class="card-img-top" alt="Diorama Volver al futuro">
               <div class="card-body">
-                <h3 class="card-text">Stan Lee</h3>
+                <h3 class="card-text">Diorama Volver al futuro</h3>
               </div>
             </div>
             <div class="card galeriaOrden" >
@@ -174,35 +175,23 @@
               <div class="card-body">
                 <h3 class="card-text">El padrino</h3>
               </div>
-            </div>
+            </div>            
             <div class="card galeriaOrden" >
-              <img src="../image/figuras/fornite.jpg" class="card-img-top" alt="Fortnite">
+              <img src="../image/figuras/mazinger.jpeg" class="card-img-top" alt="foto mazinger z">
               <div class="card-body">
-                <h3 class="card-text">Fortnite</h3>
+                <h3 class="card-text">Mazinger Z</h3>
               </div>
             </div>
             <div class="card galeriaOrden" >
-              <img src="../image/figuras/fredy.jpg" class="card-img-top" alt="Freddie Mercury caricatura">
+              <img src="../image/figuras/robocop.jpg" class="card-img-top" alt="foto robocop">
               <div class="card-body">
-                <h3 class="card-text">Freddie Mercury caricatura</h3>
+                <h3 class="card-text">Robocop</h3>
               </div>
             </div>
             <div class="card galeriaOrden" >
-              <img src="../image/figuras/fredy2.jpg" class="card-img-top" alt="Freddie Mercury">
+              <img src="../image/figuras/league.jpeg" class="card-img-top" alt="foto league of legend">
               <div class="card-body">
-                <h3 class="card-text">Freddie Mercury</h3>
-              </div>
-            </div>
-            <div class="card galeriaOrden" >
-              <img src="../image/figuras/futuro.jpg" class="card-img-top" alt="Diorama Volver al futuro">
-              <div class="card-body">
-                <h3 class="card-text">Diorama Volver al futuro</h3>
-              </div>
-            </div>
-            <div class="card galeriaOrden" >
-              <img src="../image/figuras/kobe.jpg" class="card-img-top" alt="Kobe Bryant">
-              <div class="card-body">
-                <h3 class="card-text">Kobe Bryant</h3>
+                <h3 class="card-text">League of Legend</h3>
               </div>
             </div>
             <div class="card galeriaOrden" >
@@ -211,6 +200,12 @@
                 <h3 class="card-text">Rocky Balboa</h3>
               </div>
             </div>
+            <div class="card galeriaOrden" >
+              <img src="../image/figuras/stanlee.jpg" class="card-img-top" alt="Figura Stan Lee">
+              <div class="card-body">
+                <h3 class="card-text">Stan Lee</h3>
+              </div>
+            </div>            
             <div class="card galeriaOrden" >
               <img src="../image/figuras/slash.jpg" class="card-img-top" alt="Slash">
               <div class="card-body">
@@ -228,17 +223,28 @@
             <h2 class="subTitulo">Naves y vehiculos a escala</h2>
 
           <section class="orden">
-
             <div class="card galeriaOrden" >
-              <img src="../image/naves/razor.jpeg" class="card-img-top" alt="Razor Crest">
+              <img src="../image/naves/delo.jpeg" class="card-img-top" alt="Delorean Volver al futuro">
               <div class="card-body">
-                <h3 class="card-text">Razor Crest</h3>
+                <h3 class="card-text">Delorean Volver al futuro</h3>
               </div>
             </div>
+            <div class="card galeriaOrden" >
+              <img src="../image/naves/delorean.jpeg" class="card-img-top" alt="Volver al futuro">
+              <div class="card-body">
+                <h3 class="card-text">Volver al futuro</h3>
+              </div>
+            </div>            
             <div class="card galeriaOrden" >
               <img src="../image/naves/halcon.jpeg" class="card-img-top" alt="Halcon Milenario">
               <div class="card-body">
                 <h3 class="card-text">Halcon Milenario</h3>
+              </div>
+            </div>
+            <div class="card galeriaOrden" >
+              <img src="../image/naves/shafle.jpeg" class="card-img-top" alt="Nave Imperial">
+              <div class="card-body">
+                <h3 class="card-text">Nave Imperial -Shuffle-</h3>
               </div>
             </div>
             <div class="card galeriaOrden" >
@@ -272,29 +278,17 @@
               </div>
             </div>
             <div class="card galeriaOrden" >
-              <img src="../image/naves/shafle.jpeg" class="card-img-top" alt="Nave Imperial">
+              <img src="../image/naves/razor.jpeg" class="card-img-top" alt="Razor Crest">
               <div class="card-body">
-                <h3 class="card-text">Nave Imperial -Shuffle-</h3>
+                <h3 class="card-text">Razor Crest</h3>
               </div>
-            </div>
+            </div>           
             <div class="card galeriaOrden" >
               <img src="../image/naves/varios.jpeg" class="card-img-top" alt="Naves en proceso">
               <div class="card-body">
                 <h3 class="card-text">Naves en proceso</h3>
               </div>
-            </div>
-            <div class="card galeriaOrden" >
-              <img src="../image/naves/delo.jpeg" class="card-img-top" alt="Delorean Volver al futuro">
-              <div class="card-body">
-                <h3 class="card-text">Delorean Volver al futuro</h3>
-              </div>
-            </div>
-            <div class="card galeriaOrden" >
-              <img src="../image/naves/delorean.jpeg" class="card-img-top" alt="Volver al futuro">
-              <div class="card-body">
-                <h3 class="card-text">Volver al futuro</h3>
-              </div>
-            </div>
+            </div>            
             <div class="card galeriaOrden" >
               <img src="../image/naves/n1.jpeg" class="card-img-top" alt="N1 Mandalorian">
               <div class="card-body">
