--- a/pages/bienvenidos.html
+++ b/pages/bienvenidos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Informacion de la empresa y sus origenes en el año 2020">
-    <meta name="keywords" content="impresión3d, jueguetes, funkos, souvenirs, figuras, personajes">
+    <meta name="keywords" content="impresión3d, emprendimiento, diseño">
     <title>Bienvenidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
